Libretro.NET/Bindings/RetroBindings.cs


        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_get_system_info", ExactSpelling = true)]
        public static extern void get_system_info([NativeTypeName("struct retro_system_info *")] retro_system_info* info);

        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_get_system_av_info", ExactSpelling = true)]
        public static extern void get_system_av_info([NativeTypeName("struct retro_system_av_info *")] retro_system_av_info* info);

        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_set_controller_port_device", ExactSpelling = true)]
        public static extern void set_controller_port_device([NativeTypeName("unsigned int")] uint port, [NativeTypeName("unsigned int")] uint device);

        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_reset", ExactSpelling = true)]
        public static extern void reset();

        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_run", ExactSpelling = true)]
        public static extern void run();

        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_serialize_size", ExactSpelling = true)]
        [return: NativeTypeName("size_t")]
        public static extern UIntPtr serialize_size();

        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_serialize", ExactSpelling = true)]
        [return: NativeTypeName("bool")]
        public static extern byte serialize([NativeTypeName("void *")] void* data, [NativeTypeName("size_t")] UIntPtr size);

        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_unserialize", ExactSpelling = true)]
        [return: NativeTypeName("bool")]
        public static extern byte unserialize([NativeTypeName("const void *")] void* data, [NativeTypeName("size_t")] UIntPtr size);

        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_cheat_reset", ExactSpelling = true)]
        public static extern void cheat_reset();

        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_cheat_set", ExactSpelling = true)]
        public static extern void cheat_set([NativeTypeName("unsigned int")] uint index, [NativeTypeName("bool")] byte enabled, [NativeTypeName("const char *")] sbyte* code);

        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_load_game", ExactSpelling = true)]
        [return: NativeTypeName("bool")]
        public static extern byte load_game([NativeTypeName("const struct retro_game_info *")] retro_game_info* game);

        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_load_game_special", ExactSpelling = true)]
        [return: NativeTypeName("bool")]
        public static extern byte load_game_special([NativeTypeName("unsigned int")] uint game_type, [NativeTypeName("const struct retro_game_info *")] retro_game_info* info, [NativeTypeName("size_t")] UIntPtr num_info);

        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_unload_game", ExactSpelling = true)]
        public static extern void unload_game();

        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_get_region", ExactSpelling = true)]
        [return: NativeTypeName("unsigned int")]
        public static extern uint get_region();

        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_get_memory_data", ExactSpelling = true)]
        [return: NativeTypeName("void *")]
        public static extern void* get_memory_data([NativeTypeName("unsigned int")] uint id);

        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_get_memory_size", ExactSpelling = true)]
        [return: NativeTypeName("size_t")]
        public static extern UIntPtr get_memory_size([NativeTypeName("unsigned int")] uint id);

        [NativeTypeName("#define RETRO_API_VERSION 1")]
        public const int RETRO_API_VERSION = 1;

        [NativeTypeName("#define RETRO_DEVICE_TYPE_SHIFT 8")]
        public const int RETRO_DEVICE_TYPE_SHIFT = 8;

        [NativeTypeName("#define RETRO_DEVICE_MASK ((1 << RETRO_DEVICE_TYPE_SHIFT) - 1)")]
        public const int RETRO_DEVICE_MASK = ((1 << 8) - 1);

        [NativeTypeName("#define RETRO_DEVICE_NONE 0")]
        public const int RETRO_DEVICE_NONE = 0;

        [NativeTypeName("#define RETRO_DEVICE_JOYPAD 1")]
        public const int RETRO_DEVICE_JOYPAD = 1;

        [NativeTypeName("#define RETRO_DEVICE_MOUSE 2")]
        public const int RETRO_DEVICE_MOUSE = 2;

        [NativeTypeName("#define RETRO_DEVICE_KEYBOARD 3")]
        public const int RETRO_DEVICE_KEYBOARD = 3;

        [NativeTypeName("#define RETRO_DEVICE_LIGHTGUN 4")]
        public const int RETRO_DEVICE_LIGHTGUN = 4;

        [NativeTypeName("#define RETRO_DEVICE_ANALOG 5")]
        public const int RETRO_DEVICE_ANALOG = 5;

        [NativeTypeName("#define RETRO_DEVICE_POINTER 6")]
        public const int RETRO_DEVICE_POINTER = 6;

        [NativeTypeName("#define RETRO_DEVICE_ID_JOYPAD_B 0")]
        public const int RETRO_DEVICE_ID_JOYPAD_B = 0;

        [NativeTypeName("#define RETRO_DEVICE_ID_JOYPAD_Y 1")]
        public const int RETRO_DEVICE_ID_JOYPAD_Y = 1;

        [NativeTypeName("#define RETRO_DEVICE_ID_JOYPAD_SELECT 2")]
        public const int RETRO_DEVICE_ID_JOYPAD_SELECT = 2;

        [NativeTypeName("#define RETRO_DEVICE_ID_JOYPAD_START 3")]
        public const int RETRO_DEVICE_ID_JOYPAD_START = 3;

        [NativeTypeName("#define RETRO_DEVICE_ID_JOYPAD_UP 4")]
        public const int RETRO_DEVICE_ID_JOYPAD_UP = 4;

        [NativeTypeName("#define RETRO_DEVICE_ID_JOYPAD_DOWN 5")]
        public const int RETRO_DEVICE_ID_JOYPAD_DOWN = 5;

        [NativeTypeName("#define RETRO_DEVICE_ID_JOYPAD_LEFT 6")]
        public const int RETRO_DEVICE_ID_JOYPAD_LEFT = 6;

        [NativeTypeName("#define RETRO_DEVICE_ID_JOYPAD_RIGHT 7")]
        public const int RETRO_DEVICE_ID_JOYPAD_RIGHT = 7;

        [NativeTypeName("#define RETRO_DEVICE_ID_JOYPAD_A 8")]
        public const int RETRO_DEVICE_ID_JOYPAD_A = 8;

        [NativeTypeName("#define RETRO_DEVICE_ID_JOYPAD_X 9")]
        public const int RETRO_DEVICE_ID_JOYPAD_X = 9;

        [NativeTypeName("#define RETRO_DEVICE_ID_JOYPAD_L 10")]
        public const int RETRO_DEVICE_ID_JOYPAD_L = 10;

        [NativeTypeName("#define RETRO_DEVICE_ID_JOYPAD_R 11")]
        public const int RETRO_DEVICE_ID_JOYPAD_R = 11;

        [NativeTypeName("#define RETRO_DEVICE_ID_JOYPAD_L2 12")]
        public const int RETRO_DEVICE_ID_JOYPAD_L2 = 12;

        [NativeTypeName("#define RETRO_DEVICE_ID_JOYPAD_R2 13")]
        public const int RETRO_DEVICE_ID_JOYPAD_R2 = 13;

        [NativeTypeName("#define RETRO_DEVICE_ID_JOYPAD_L3 14")]
        public const int RETRO_DEVICE_ID_JOYPAD_L3 = 14;

        [NativeTypeName("#define RETRO_DEVICE_ID_JOYPAD_R3 15")]
        public const int RETRO_DEVICE_ID_JOYPAD_R3 = 15;

        [NativeTypeName("#define RETRO_DEVICE_ID_JOYPAD_MASK 256")]
        public const int RETRO_DEVICE_ID_JOYPAD_MASK = 256;

        [NativeTypeName("#define RETRO_DEVICE_INDEX_ANALOG_LEFT 0")]
        public const int RETRO_DEVICE_INDEX_ANALOG_LEFT = 0;

        [NativeTypeName("#define RETRO_DEVICE_INDEX_ANALOG_RIGHT 1")]
        public const int RETRO_DEVICE_INDEX_ANALOG_RIGHT = 1;

        [NativeTypeName("#define RETRO_DEVICE_INDEX_ANALOG_BUTTON 2")]
        public const int RETRO_DEVICE_INDEX_ANALOG_BUTTON = 2;

        [NativeTypeName("#define RETRO_DEVICE_ID_ANALOG_X 0")]
        public const int RETRO_DEVICE_ID_ANALOG_X = 0;

        [NativeTypeName("#define RETRO_DEVICE_ID_ANALOG_Y 1")]
        public const int RETRO_DEVICE_ID_ANALOG_Y = 1;

        [NativeTypeName("#define RETRO_DEVICE_ID_MOUSE_X 0")]
        public const int RETRO_DEVICE_ID_MOUSE_X = 0;

        [NativeTypeName("#define RETRO_DEVICE_ID_MOUSE_Y 1")]
        public const int RETRO_DEVICE_ID_MOUSE_Y = 1;

        [NativeTypeName("#define RETRO_DEVICE_ID_MOUSE_LEFT 2")]
        public const int RETRO_DEVICE_ID_MOUSE_LEFT = 2;

        [NativeTypeName("#define RETRO_DEVICE_ID_MOUSE_RIGHT 3")]
        public const int RETRO_DEVICE_ID_MOUSE_RIGHT = 3;

        [NativeTypeName("#define RETRO_DEVICE_ID_MOUSE_WHEELUP 4")]
        public const int RETRO_DEVICE_ID_MOUSE_WHEELUP = 4;

        [NativeTypeName("#define RETRO_DEVICE_ID_MOUSE_WHEELDOWN 5")]
        public const int RETRO_DEVICE_ID_MOUSE_WHEELDOWN = 5;

        [NativeTypeName("#define RETRO_DEVICE_ID_MOUSE_MIDDLE 6")]
        public const int RETRO_DEVICE_ID_MOUSE_MIDDLE = 6;

        [NativeTypeName("#define RETRO_DEVICE_ID_MOUSE_HORIZ_WHEELUP 7")]
        public const int RETRO_DEVICE_ID_MOUSE_HORIZ_WHEELUP = 7;

        [NativeTypeName("#define RETRO_DEVICE_ID_MOUSE_HORIZ_WHEELDOWN 8")]
        public const int RETRO_DEVICE_ID_MOUSE_HORIZ_WHEELDOWN = 8;

        [NativeTypeName("#define RETRO_DEVICE_ID_MOUSE_BUTTON_4 9")]
        public const int RETRO_DEVICE_ID_MOUSE_BUTTON_4 = 9;

        [NativeTypeName("#define RETRO_DEVICE_ID_MOUSE_BUTTON_5 10")]
        public const int RETRO_DEVICE_ID_MOUSE_BUTTON_5 = 10;

        [NativeTypeName("#define RETRO_DEVICE_ID_LIGHTGUN_SCREEN_X 13")]
        public const int RETRO_DEVICE_ID_LIGHTGUN_SCREEN_X = 13;

        [NativeTypeName("#define RETRO_DEVICE_ID_LIGHTGUN_SCREEN_Y 14")]
        public const int RETRO_DEVICE_ID_LIGHTGUN_SCREEN_Y = 14;

        [NativeTypeName("#define RETRO_DEVICE_ID_LIGHTGUN_IS_OFFSCREEN 15")]
        public const int RETRO_DEVICE_ID_LIGHTGUN_IS_OFFSCREEN = 15;

        [NativeTypeName("#define RETRO_DEVICE_ID_LIGHTGUN_TRIGGER 2")]
        public const int RETRO_DEVICE_ID_LIGHTGUN_TRIGGER = 2;

        [NativeTypeName("#define RETRO_DEVICE_ID_LIGHTGUN_RELOAD 16")]
        public const int RETRO_DEVICE_ID_LIGHTGUN_RELOAD = 16;

        [NativeTypeName("#define RETRO_DEVICE_ID_LIGHTGUN_AUX_A 3")]
        public const int RETRO_DEVICE_ID_LIGHTGUN_AUX_A = 3;

        [NativeTypeName("#define RETRO_DEVICE_ID_LIGHTGUN_AUX_B 4")]
        public const int RETRO_DEVICE_ID_LIGHTGUN_AUX_B = 4;

        [NativeTypeName("#define RETRO_DEVICE_ID_LIGHTGUN_START 6")]
        public const int RETRO_DEVICE_ID_LIGHTGUN_START = 6;

        [NativeTypeName("#define RETRO_DEVICE_ID_LIGHTGUN_SELECT 7")]
        public const int RETRO_DEVICE_ID_LIGHTGUN_SELECT = 7;

        [NativeTypeName("#define RETRO_DEVICE_ID_LIGHTGUN_AUX_C 8")]
        public const int RETRO_DEVICE_ID_LIGHTGUN_AUX_C = 8;

        [NativeTypeName("#define RETRO_DEVICE_ID_LIGHTGUN_DPAD_UP 9")]
        public const int RETRO_DEVICE_ID_LIGHTGUN_DPAD_UP = 9;

        [NativeTypeName("#define RETRO_DEVICE_ID_LIGHTGUN_DPAD_DOWN 10")]
        public const int RETRO_DEVICE_ID_LIGHTGUN_DPAD_DOWN = 10;

        [NativeTypeName("#define RETRO_DEVICE_ID_LIGHTGUN_DPAD_LEFT 11")]
        public const int RETRO_DEVICE_ID_LIGHTGUN_DPAD_LEFT = 11;

        [NativeTypeName("#define RETRO_DEVICE_ID_LIGHTGUN_DPAD_RIGHT 12")]
        public const int RETRO_DEVICE_ID_LIGHTGUN_DPAD_RIGHT = 12;

        [NativeTypeName("#define RETRO_DEVICE_ID_LIGHTGUN_X 0")]
        public const int RETRO_DEVICE_ID_LIGHTGUN_X = 0;

        [NativeTypeName("#define RETRO_DEVICE_ID_LIGHTGUN_Y 1")]
        public const int RETRO_DEVICE_ID_LIGHTGUN_Y = 1;

        [NativeTypeName("#define RETRO_DEVICE_ID_LIGHTGUN_CURSOR 3")]
        public const int RETRO_DEVICE_ID_LIGHTGUN_CURSOR = 3;

        [NativeTypeName("#define RETRO_DEVICE_ID_LIGHTGUN_TURBO 4")]
        public const int RETRO_DEVICE_ID_LIGHTGUN_TURBO = 4;

        [NativeTypeName("#define RETRO_DEVICE_ID_LIGHTGUN_PAUSE 5")]
        public const int RETRO_DEVICE_ID_LIGHTGUN_PAUSE = 5;
